[tool.poetry]
name = "stream-vcr"
version = "0.1.0"
description = "A VCR for streams from Twitch and alike"
authors = ["Jan Willhaus <mail@janwillhaus.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
dynaconf = "^3.0.0"
requests = "^2.24.0"
loguru = "^0.5.1"
requests-oauthlib = "^1.3.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
